src/snapshots/csvs_convert__describer__tests__stats_number.snap
---
source: src/describer.rs
assertion_line: 778
expression: describer.stats()
---
Object {
    "min_len": Number(1),
    "max_len": Number(4),
    "min_str": String("0"),
    "max_str": String("999"),
    "count": Number(1001),
    "empty_count": Number(0),
    "exact_unique": Null,
    "estimate_unique": Number(999),
    "top_20": Null,
    "sum": Number(500500.0),
    "mean": Number(500.0),
    "variance": Number(83500.0),
    "stddev": Number(288.9636655359978),
    "min_number": Number(0.0),
    "max_number": Number(1000.0),
    "median": Number(500.0),
    "lower_quartile": Number(249.75),
    "upper_quartile": Number(750.25),
    "deciles": Array [
        Number(99.60000000000001),
        Number(199.70000000000002),
        Number(299.80000000000007),
        Number(399.90000000000003),
        Number(500.0),
        Number(600.1000000000001),
        Number(700.2),
        Number(800.3000000000001),
        Number(900.3999999999999),
    ],
    "centiles": Array [
        Number(9.51),
        Number(19.52),
        Number(29.529999999999998),
        Number(39.540000000000006),
        Number(49.550000000000004),
        Number(59.55999999999999),
        Number(69.57000000000001),
        Number(79.58),
        Number(89.59),
        Number(99.60000000000001),
        Number(109.61),
        Number(119.61999999999998),
        Number(129.63),
        Number(139.64000000000001),
        Number(149.65),
        Number(159.66),
        Number(169.67000000000002),
        Number(179.67999999999998),
        Number(189.69),
        Number(199.70000000000002),
        Number(209.70999999999998),
        Number(219.72),
        Number(229.73000000000002),
        Number(239.74),
        Number(249.75),
        Number(259.76),
        Number(269.77000000000004),
        Number(279.78000000000003),
        Number(289.78999999999996),
        Number(299.8),
        Number(309.81),
        Number(319.82000000000005),
        Number(329.83000000000004),
        Number(339.84000000000003),
        Number(349.85),
        Number(359.86),
        Number(369.87),
        Number(379.88),
        Number(389.89),
        Number(399.90000000000003),
        Number(409.91),
        Number(419.91999999999996),
        Number(429.93),
        Number(439.94),
        Number(449.95),
        Number(459.9600000000001),
        Number(469.97),
        Number(479.98),
        Number(489.99),
        Number(500.0),
        Number(510.01),
        Number(520.02),
        Number(530.03),
        Number(540.0400000000001),
        Number(550.0500000000001),
        Number(560.06),
        Number(570.07),
        Number(580.0799999999999),
        Number(590.0899999999999),
        Number(600.1),
        Number(610.11),
        Number(620.1199999999999),
        Number(630.13),
        Number(640.14),
        Number(650.15),
        Number(660.1600000000001),
        Number(670.1700000000001),
        Number(680.1800000000001),
        Number(690.19),
        Number(700.2),
        Number(710.21),
        Number(720.22),
        Number(730.23),
        Number(740.24),
        Number(750.25),
        Number(760.26),
        Number(770.27),
        Number(780.28),
        Number(790.29),
        Number(800.3000000000001),
        Number(810.3100000000001),
        Number(820.3200000000002),
        Number(830.33),
        Number(840.3399999999999),
        Number(850.35),
        Number(860.36),
        Number(870.37),
        Number(880.38),
        Number(890.39),
        Number(900.3999999999999),
        Number(910.4100000000002),
        Number(920.4200000000001),
        Number(930.4300000000001),
        Number(940.44),
        Number(950.45),
        Number(960.4599999999998),
        Number(970.47),
        Number(980.48),
        Number(990.49),
    ],
}
