src/snapshots/csvs_convert__describer__tests__stats_process_number-2.snap
---
source: src/describer.rs
expression: describer.stats()
---
Object {
    "min_len": Number(1),
    "max_len": Number(4),
    "min_str": String("1"),
    "max_str": String("a"),
    "count": Number(1002),
    "empty_count": Number(0),
    "exact_unique": Null,
    "estimate_unique": Number(999),
    "top_20": Null,
    "sum": Null,
    "mean": Null,
    "variance": Null,
    "stddev": Null,
    "min_number": Null,
    "max_number": Null,
    "median": Null,
    "lower_quartile": Null,
    "upper_quartile": Null,
    "deciles": Null,
    "centiles": Null,
}
