src/snapshots/csvs_convert__describer__tests__stats_string.snap
---
source: src/describer.rs
expression: describer.stats()
---
Object {
    "min_len": Number(1),
    "max_len": Number(1),
    "min_str": String("a"),
    "max_str": String("c"),
    "count": Number(4),
    "empty_count": Number(0),
    "exact_unique": Number(3),
    "estimate_unique": Null,
    "top_20": Array [
        Array [
            String("c"),
            Number(2),
        ],
        Array [
            String("a"),
            Number(1),
        ],
        Array [
            String("b"),
            Number(1),
        ],
    ],
    "sum": Null,
    "mean": Null,
    "variance": Null,
    "stddev": Null,
    "min_number": Null,
    "max_number": Null,
    "median": Null,
    "lower_quartile": Null,
    "upper_quartile": Null,
    "deciles": Null,
    "centiles": Null,
}
