src/snapshots/csvs_convert__describer__tests__stats_string_too_long.snap
---
source: src/describer.rs
expression: describer.stats()
---
Object({
    "min_len": Number(
        1,
    ),
    "max_len": Number(
        101,
    ),
    "min_str": String(
        "a",
    ),
    "max_str": String(
        "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
    ),
    "count": Number(
        2,
    ),
    "empty_count": Number(
        0,
    ),
    "exact_unique": Null,
    "estimate_unique": Number(
        2,
    ),
    "top_20": Null,
    "sum": Null,
    "mean": Null,
    "variance": Null,
    "stddev": Null,
    "min_number": Null,
    "max_number": Null,
    "median": Null,
    "lower_quartile": Null,
    "upper_quartile": Null,
    "deciles": Null,
    "centiles": Null,
})
